# riley

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  riley  riley.cpp
cfg/: coco.data  riley.cfg  riley.data  riley_small.cfg
darknet_riley/include/: CentroidTracker.h  ObjectDetector.h  Riley.h  RileyUtils.h
darknet_riley/src/: CentroidTracker.cpp  ObjectDetector.cpp  RileyUtils.cpp
data/: 00.list
data/riley/: labels.txt  train.list
data/store/: fill.py
dep/: CMakeLists.txt
devel/: build_riley.sh  cpp_dep.sh  install_cpp_dep.sh  install_darknet.sh  install_dep.sh  install_dependencies.sh  install_opencv.sh  install_opennn.sh  install_py_dep.sh  opencv.sh  opennn.sh  setup.sh
include/: CentroidTracker.h  ObjectDetector.h  Riley.h  RileyUtils.h  YoloObjectDetector.h  riley.h  riley_utils.h
include/riley/: ObjectDetector.h  riley.h  utils.h
meta/: README.md
network/: CMakeLists.txt  README.md  network.cpp  network.h
riley/include/: CentroidTracker.h  ObjectDetector.h  riley_utils.h
riley/src/: CentroidTracker.cpp  ObjectDetector.cpp  riley.cpp  riley_utils.cpp
scripts/: build_riley.sh  collect_luma_data.sh  darknet.sh  dep.sh  py_dep.sh
src/: CMakeLists.txt  CentroidTracker.cpp  ObjectDetector.cpp  Riley.cpp  RileyUtils.cpp  YoloObjectDetector.cpp  demo.cpp  riley.cpp  riley_utils.cpp  utils.cpp
src/darknet/: Makefile
src/darknet/src/: image_opencv.cpp
src/darknet_riley/: CMakeLists.txt  YoloObjectDetector.cpp  YoloObjectDetector.h
src/darknet_riley/cfg/: yolov3-riley.cfg
src/darknet_riley/include/: CentroidTracker.h  YoloObjectDetector.h  darknet_riley.h
src/darknet_riley/src/: CentroidTracker.cpp  YoloObjectDetector.cpp
src/data/: CMakeLists.txt  README.md
src/data/process/: process.py
src/data/store/: data.py  model.py
src/data_process/: CMakeLists.txt  VideoProcessor.cpp  VideoProcessor.h  VideoProcessor.py  process.h  process.py
src/data_process/include/: VideoProcessor.h
src/data_process/src/: CMakeLists.txt  VideoProcessor.cpp
src/manipulate/: CMakeLists.txt
src/manipulate/include/: ImageProcessor.h  MediaProcessor.h  VideoProcessor.h  manipulate.h
src/manipulate/src/: ImageProcessor.cpp  MediaProcessor.cpp  VideoProcessor.cpp  manipulate.cpp
src/network/: CMakeLists.txt  network.h
src/network/include/: RileyNet.h
src/network/network_meta/store/: 00_network.xml  00_train_strat.xml
src/network/src/: RileyNet.cpp
src/video/: CMakeLists.txt  README.md  video.cpp  video.h
weights/: get_weights.txt
weights/backup/: riley.backup
